--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@reduxjs/toolkit": "^1.6.2",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^7.2.1",
@@ -15,7 +16,8 @@
     "react-dom": "^16.12.0",
     "react-redux": "^7.2.2",
     "react-scripts": "3.4.0",
-    "redux": "^4.0.5",
+    "redux": "^4.1.2",
+    "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
     "thunk": "0.0.1"
   },
